k8s-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: balance-checker
spec:
  selector:
    app: balance-checker
  ports:
    - port: 80
      targetPort: 80
